# datapandas

./: README.md  pyproject.toml
.github/workflows/: tests.yml
datacheck/: __init__.py  missing.py  pretty.py  summary.py
datacheck.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
datapandas/: __init__.py
datapandas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
datapandas/datacheck/: __init__.py  core.py  pretty.py  report.py  summary.py
datapandas/profiling/: __init__.py  cardinality.py
dqch/: __init__.py  duplicates.py  outliers.py  pretty.py  summary.py
dqch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: basic_usage.py
tests/: test_core.py  test_profiling.py
