[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dqch"
version = "0.1.0"
description = "Lightweight data quality checks for pandas DataFrames"
authors = [
    { name="dayko" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas"
]

[tool.setuptools.packages.find]
where = ["."]
